tooling/nargo_cli/tests/snapshots/execution_success/databus_composite_calldata/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "foos",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "struct",
            "path": "Foo",
            "fields": [
              {
                "name": "x",
                "type": {
                  "kind": "integer",
                  "sign": "unsigned",
                  "width": 32
                }
              },
              {
                "name": "y",
                "type": {
                  "kind": "array",
                  "length": 10,
                  "type": {
                    "kind": "integer",
                    "sign": "unsigned",
                    "width": 32
                  }
                }
              }
            ]
          }
        },
        "visibility": "databus"
      },
      {
        "name": "values",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "array",
            "length": 2,
            "type": {
              "kind": "array",
              "length": 2,
              "type": {
                "kind": "integer",
                "sign": "unsigned",
                "width": 32
              }
            }
          }
        },
        "visibility": "databus"
      },
      {
        "name": "zero",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "one",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "unsigned",
        "width": 32
      },
      "visibility": "public"
    },
    "error_types": {
      "1534749929587795882": {
        "error_kind": "string",
        "string": "Index out of bounds"
      },
      "9579943917905940306": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _120",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10, _11, _12, _13, _14, _15, _16, _17, _18, _19, _20, _21, _22, _23, _24, _25, _26, _27, _28, _29, _30, _31, _32, _33, _34, _35]",
    "public parameters indices : []",
    "return value indices : [_36]",
    "BLACKBOX::RANGE [(_0, 32)] []",
    "BLACKBOX::RANGE [(_1, 32)] []",
    "BLACKBOX::RANGE [(_2, 32)] []",
    "BLACKBOX::RANGE [(_3, 32)] []",
    "BLACKBOX::RANGE [(_4, 32)] []",
    "BLACKBOX::RANGE [(_5, 32)] []",
    "BLACKBOX::RANGE [(_6, 32)] []",
    "BLACKBOX::RANGE [(_7, 32)] []",
    "BLACKBOX::RANGE [(_8, 32)] []",
    "BLACKBOX::RANGE [(_9, 32)] []",
    "BLACKBOX::RANGE [(_10, 32)] []",
    "BLACKBOX::RANGE [(_11, 32)] []",
    "BLACKBOX::RANGE [(_12, 32)] []",
    "BLACKBOX::RANGE [(_13, 32)] []",
    "BLACKBOX::RANGE [(_14, 32)] []",
    "BLACKBOX::RANGE [(_15, 32)] []",
    "BLACKBOX::RANGE [(_16, 32)] []",
    "BLACKBOX::RANGE [(_17, 32)] []",
    "BLACKBOX::RANGE [(_18, 32)] []",
    "BLACKBOX::RANGE [(_19, 32)] []",
    "BLACKBOX::RANGE [(_20, 32)] []",
    "BLACKBOX::RANGE [(_21, 32)] []",
    "BLACKBOX::RANGE [(_22, 32)] []",
    "BLACKBOX::RANGE [(_23, 32)] []",
    "BLACKBOX::RANGE [(_24, 32)] []",
    "BLACKBOX::RANGE [(_25, 32)] []",
    "BLACKBOX::RANGE [(_26, 32)] []",
    "BLACKBOX::RANGE [(_27, 32)] []",
    "BLACKBOX::RANGE [(_28, 32)] []",
    "BLACKBOX::RANGE [(_29, 32)] []",
    "BLACKBOX::RANGE [(_30, 32)] []",
    "BLACKBOX::RANGE [(_31, 32)] []",
    "BLACKBOX::RANGE [(_32, 32)] []",
    "BLACKBOX::RANGE [(_33, 32)] []",
    "EXPR [ (-1, _37) 0 ]",
    "EXPR [ (-1, _38) 1 ]",
    "EXPR [ (-1, _39) 11 ]",
    "EXPR [ (-1, _40) 12 ]",
    "EXPR [ (-1, _41) 22 ]",
    "INIT (id: 2, len: 5, witnesses: [_37, _38, _39, _40, _41])",
    "EXPR [ (2, _34) (-1, _42) 0 ]",
    "MEM (id: 2, read at: EXPR [ (1, _42) 0 ], value: EXPR [ (1, _43) 0 ]) ",
    "INIT CALLDATA 0 (id: 3, len: 34, witnesses: [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10, _11, _12, _13, _14, _15, _16, _17, _18, _19, _20, _21, _22, _23, _24, _25, _26, _27, _28, _29, _30, _31, _32, _33])",
    "MEM (id: 3, read at: EXPR [ (1, _43) 0 ], value: EXPR [ (1, _44) 0 ]) ",
    "EXPR [ (1, _44) (-1, _45) 1 ]",
    "BLACKBOX::RANGE [(_45, 32)] []",
    "EXPR [ (2, _35) (-1, _46) 0 ]",
    "MEM (id: 2, read at: EXPR [ (1, _46) 0 ], value: EXPR [ (1, _47) 0 ]) ",
    "MEM (id: 3, read at: EXPR [ (1, _47) 0 ], value: EXPR [ (1, _48) 0 ]) ",
    "EXPR [ (1, _45) (-1, _48) 0 ]",
    "EXPR [ (1, _42) (-1, _49) 1 ]",
    "MEM (id: 2, read at: EXPR [ (1, _49) 0 ], value: EXPR [ (1, _50) 0 ]) ",
    "MEM (id: 3, read at: EXPR [ (1, _50) 0 ], value: EXPR [ (1, _51) 0 ]) ",
    "EXPR [ (1, _50) (-1, _52) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _52) 0 ], value: EXPR [ (1, _53) 0 ]) ",
    "EXPR [ (1, _52) (-1, _54) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _54) 0 ], value: EXPR [ (1, _55) 0 ]) ",
    "EXPR [ (1, _54) (-1, _56) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _56) 0 ], value: EXPR [ (1, _57) 0 ]) ",
    "EXPR [ (1, _56) (-1, _58) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _58) 0 ], value: EXPR [ (1, _59) 0 ]) ",
    "EXPR [ (1, _58) (-1, _60) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _60) 0 ], value: EXPR [ (1, _61) 0 ]) ",
    "EXPR [ (1, _60) (-1, _62) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _62) 0 ], value: EXPR [ (1, _63) 0 ]) ",
    "EXPR [ (1, _62) (-1, _64) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _64) 0 ], value: EXPR [ (1, _65) 0 ]) ",
    "EXPR [ (1, _64) (-1, _66) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _66) 0 ], value: EXPR [ (1, _67) 0 ]) ",
    "EXPR [ (1, _66) (-1, _68) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _68) 0 ], value: EXPR [ (1, _69) 0 ]) ",
    "EXPR [ (1, _57) (-1, _70) 2 ]",
    "BLACKBOX::RANGE [(_70, 32)] []",
    "EXPR [ (1, _46) (-1, _71) 1 ]",
    "MEM (id: 2, read at: EXPR [ (1, _71) 0 ], value: EXPR [ (1, _72) 0 ]) ",
    "MEM (id: 3, read at: EXPR [ (1, _72) 0 ], value: EXPR [ (1, _73) 0 ]) ",
    "EXPR [ (1, _72) (-1, _74) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _74) 0 ], value: EXPR [ (1, _75) 0 ]) ",
    "EXPR [ (1, _74) (-1, _76) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _76) 0 ], value: EXPR [ (1, _77) 0 ]) ",
    "EXPR [ (1, _76) (-1, _78) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _78) 0 ], value: EXPR [ (1, _79) 0 ]) ",
    "EXPR [ (1, _78) (-1, _80) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _80) 0 ], value: EXPR [ (1, _81) 0 ]) ",
    "EXPR [ (1, _80) (-1, _82) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _82) 0 ], value: EXPR [ (1, _83) 0 ]) ",
    "EXPR [ (1, _82) (-1, _84) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _84) 0 ], value: EXPR [ (1, _85) 0 ]) ",
    "EXPR [ (1, _84) (-1, _86) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _86) 0 ], value: EXPR [ (1, _87) 0 ]) ",
    "EXPR [ (1, _86) (-1, _88) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _88) 0 ], value: EXPR [ (1, _89) 0 ]) ",
    "EXPR [ (1, _88) (-1, _90) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _90) 0 ], value: EXPR [ (1, _91) 0 ]) ",
    "EXPR [ (1, _70) (-1, _81) 0 ]",
    "EXPR [ (4, _34) (-1, _92) 22 ]",
    "MEM (id: 3, read at: EXPR [ (1, _92) 0 ], value: EXPR [ (1, _93) 0 ]) ",
    "EXPR [ (1, _92) (-1, _94) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _94) 0 ], value: EXPR [ (1, _95) 0 ]) ",
    "EXPR [ (1, _94) (-1, _96) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _96) 0 ], value: EXPR [ (1, _97) 0 ]) ",
    "EXPR [ (1, _96) (-1, _98) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _98) 0 ], value: EXPR [ (1, _99) 0 ]) ",
    "INIT (id: 4, len: 4, witnesses: [_93, _95, _97, _99])",
    "EXPR [ (2, _35) (-1, _100) 0 ]",
    "MEM (id: 4, read at: EXPR [ (1, _100) 0 ], value: EXPR [ (1, _101) 0 ]) ",
    "EXPR [ (1, _100) (-1, _102) 1 ]",
    "MEM (id: 4, read at: EXPR [ (1, _102) 0 ], value: EXPR [ (1, _103) 0 ]) ",
    "INIT (id: 5, len: 2, witnesses: [_101, _103])",
    "MEM (id: 5, read at: EXPR [ (1, _34) 0 ], value: EXPR [ (1, _104) 0 ]) ",
    "EXPR [ (4, _35) (-1, _105) 22 ]",
    "MEM (id: 3, read at: EXPR [ (1, _105) 0 ], value: EXPR [ (1, _106) 0 ]) ",
    "EXPR [ (1, _105) (-1, _107) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _107) 0 ], value: EXPR [ (1, _108) 0 ]) ",
    "EXPR [ (1, _107) (-1, _109) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _109) 0 ], value: EXPR [ (1, _110) 0 ]) ",
    "EXPR [ (1, _109) (-1, _111) 1 ]",
    "MEM (id: 3, read at: EXPR [ (1, _111) 0 ], value: EXPR [ (1, _112) 0 ]) ",
    "INIT (id: 6, len: 4, witnesses: [_106, _108, _110, _112])",
    "EXPR [ (2, _34) (-1, _113) 0 ]",
    "MEM (id: 6, read at: EXPR [ (1, _113) 0 ], value: EXPR [ (1, _114) 0 ]) ",
    "EXPR [ (1, _113) (-1, _115) 1 ]",
    "MEM (id: 6, read at: EXPR [ (1, _115) 0 ], value: EXPR [ (1, _116) 0 ]) ",
    "INIT (id: 7, len: 2, witnesses: [_114, _116])",
    "MEM (id: 7, read at: EXPR [ (1, _35) 0 ], value: EXPR [ (1, _117) 0 ]) ",
    "EXPR [ (1, _104) (-1, _117) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _49) 4294967292 ], EXPR [ 4294967296 ]], outputs: [_118, _119]",
    "BLACKBOX::RANGE [(_119, 32)] []",
    "EXPR [ (1, _49) (-4294967296, _118) (-1, _119) 4294967292 ]",
    "EXPR [ (-1, _118) 0 ]",
    "EXPR [ (1, _44) (1, _73) (-1, _120) 0 ]",
    "BLACKBOX::RANGE [(_120, 32)] []",
    "EXPR [ (1, _36) (-1, _120) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient"
  ]
}
