tooling/nargo_cli/tests/snapshots/execution_success/databus_composite_calldata/execute__tests__force_brillig_true_inliner_-9223372036854775808_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----
[databus_composite_calldata] Circuit output: Field(2)
----- stderr -----
