tooling/nargo_cli/tests/snapshots/execution_success/databus_composite_calldata/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [(u32, [u32; 10]); 2], v1: [[[u32; 2]; 2]; 3], v2: u32, v3: u32):
    (no terminator instruction)
}
[databus_composite_calldata] Circuit output: 2
